# CytoCherryPick

./: .gitignore  .pre-commit-config.yaml  CytoCurve.sh  README.md  pre-commit-config.yaml  pyproject.toml  setup.py
0.Data_Preprocessing/: 0.generate_toy_data.ipynb
0.Data_Preprocessing/notebooks/: 0.generate_toy_data.ipynb
0.Data_Preprocessing/scripts/: 0.generate_toy_data.py
Utils/: helper_functions.py  main.py
data/: test_data_output.csv
docs/: conf.py  index.md
env/: env.yml
example.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: CytoCherryPick.py  cherrypick.py
src/cytocherrypick/: _version.py  calculations.py  cherrypick.py  generate_test_data.py  plot_distribution.py
src/utils/: helper_functions.py
src/utils/helper_functions/: calculations.py  find_median.py  generate_test_data.py  plot_distribution.py
tests/: test_data_check.py  test_plot.py
tests/data/: test_data.csv
tests/main_tests/: __init__.py  median_test.py  plot_test.py  test_data_check.py
