[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cytocherrypick"
dynamic = ["version"]
description = "A tool for visualizing a miscropscopy image's feature space."
readme = "README.md"
license = "BSD 3"
authors = [
    { name = "Mike Lippincott", email = "michael.lippincott@cucanschutz.edu" },
]
classifiers = [
    "License :: OSI Approved :: BSD 3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "matplotlib",
    "pandas",
    "seaborn",
]

[project.scripts]
cytocherrypick = "cytocherrypick.main:main"

[project.urls]
Homepage = "https://github.com/WayScience/CytoCherryPick"

[tool.hatch.version]
path = "cytocherrypick/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/cytocherrypick",
]

# contents of pyproject.toml
[tool.hatch.envs.default]
dependencies = ["matplotlib",
    "pandas",
    "seaborn",]

[tool.jupytext]
formats = "ipynb,py:percent"

