[tool.poetry]
name = "cytocherrypick"
version = "0.1.0"
description = "CytoCherryPick is an open source software that provides a set of tools for the selection of representative images from a set of images."
authors = ["Mike Lippincott <michael.lippincott@cucanschutz.edu>"]
license = "BSD 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "<2.0"
numpy = "<2.0"
seaborn = "<2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
